FOF 3.1.3
================================================================================
+ TimezoneWrangler helper class
+ Automatically refresh the #__extensions version number before fetching updates if it's inconsistent
~ Change the way we catch and warn about Container serialization

FOF 3.1.2
================================================================================
+ Added preventStateBleedover to the Controller to have it automatically prevent state bleedover when the same model is used as the default in more than one views. Default disabled. You need to enable it in affected views.
+ You can now pass a hash_view to the Model's constructor to modify the way the hash is generated when none is provided
+ You can now pass a custom state hash to the Model's constructor and/or set it with the setHash() method
~ Fix the handling of chained IPs in X-Forwarded-For
# DataModel: reset() should also clear WHERE clauses

FOF 3.1.1
================================================================================
+ Controller mixins
+ Model mixins
+ @plural() Blade statement to support JText::plural()
+ @jlayout() Blade statement to load and render JLayout view templates
+ ViewTemplate field passes $rowid to the view template
+ Published field takes into account ACL
+ Installation script classes for modules and plugins
~ Working around Joomla's bug about forgotten files on update

FOF 3.1.0
================================================================================
! Joomla! 3.7 has a broken System - Page Cache plugin which leads to white pages
+ Abstraction of session get/set variables in the Platform
+ You can add external CSS and JS files through the View and Template packages

Backwards compatibility and migration notes:

* PHP 5.3 no longer supported. The minimum supported version of PHP is now 5.4.0. Some features may require PHP 5.5+.
* If you use a custom Platform class which doesn't extend FOF30\Platform\Joomla\Platform you will need to implement the